# owl-vit-app

./: README.md  app.py  image_processor.py  model_manager.py  pyproject.toml  run_app_uv.sh  translator.py  ui_components.py  visualization.py
